--- a/src/public/css/purchase.css
+++ b/src/public/css/purchase.css
@@ -117,3 +117,15 @@
     border-radius: 4px;
     margin: 40px 0;
 }
+
+.error {
+    font-size: 16px;
+    color: red;
+    text-align: center;
+    margin-top: 40px;
+}
+
+.error li {
+    list-style: none;
+    padding: 5px;
+}
