--- a/src/public/css/mypage.css
+++ b/src/public/css/mypage.css
@@ -78,7 +78,7 @@
     margin: 50px 60px;
 }
 
-.item__image {
+.main__item {
     width: 25%;
 }
 
@@ -104,4 +104,23 @@
     display: block;
     content: '';
     flex-grow: 1;
+}
+
+.sold {
+    position: relative;
+}
+
+.sold span {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-weight: bold;
+    color: red;
+    font-size: 14px;
+    background-color: white;
+}
+
+.sold img {
+    filter: grayscale(150);
 }
