--- a/src/public/css/layouts/common.css
+++ b/src/public/css/layouts/common.css
@@ -2,6 +2,10 @@ body {
     padding-top: 80px;
 }
 
+html {
+    font-size: 62.5%;
+}
+
 .header {
     width: 100vw;
     position: fixed;
@@ -15,13 +19,25 @@ body {
     height: 80px;
     background-color: black;
     display: flex;
-    justify-content: space-between;
     align-items: center;
 }
 
+.header__nav-container {
+    width: 70%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 20px;
+}
+
 .header__logo {
-    width: 320px;
-    padding: 20px;
+    width: 30%;
+    padding: 30px;
+    box-sizing: border-box;
+}
+
+.header__logo img {
+    width: 100%;
 }
 
 .header__logo a {
@@ -31,7 +47,7 @@ body {
 }
 
 .header__search {
-    width: 30%;
+    width: 50%;
 }
 
 .header__search-form {
@@ -42,9 +58,10 @@ body {
     width: 90%;
     height: 50px;
     padding: 0 10px;
-    font-size: 16px;
+    font-size: clamp(1.2rem, calc(0.9rem + 0.625vw), 1.6rem);
     border: 1px solid black;
     border-radius: 3px;
+    box-sizing: border-box;
 }
 
 .header__search-form input::placeholder {
@@ -52,7 +69,7 @@ body {
 }
 
 .header__nav {
-    width: 30%;
+    width: 50%;
     display: flex;
     justify-content: end;
     align-items: center;
@@ -68,7 +85,7 @@ body {
 .header__nav__item button {
     color: white;
     background-color: black;
-    font-size: 14px;
+    font-size: clamp(1.1rem, calc(0.6rem + 0.625vw), 1.6rem);
     border: none;
 }
 
@@ -79,4 +96,86 @@ body {
     border: 1px solid black;
     border-radius: 5px;
     padding: 5px 15px;
+}
+
+.nav-button {
+    display: none;
+}
+
+@media screen and (max-width: 768px) {
+    .header__wrapper {
+        justify-content: space-between;
+    }
+
+    .header__logo {
+        width: 50%;
+    }
+
+    /* ナビゲーションボタン　*/
+    .nav-button {
+        display: block;
+        box-sizing: content-box;
+        padding: 0px;
+        margin: 20px;
+        border: none;
+        outline: none;
+        background: none;
+        width: 40px;
+        height: 30px;
+        cursor: pointer;
+        color: white;
+    }
+
+    .nav-button::before,
+    .nav-button::after {
+        content: '';
+        display: block;
+        height: 2px;
+        background-color: currentColor;
+        transform: translateY(15px);
+        transition: 0.3s ease-in-out;
+    }
+
+    .nav-button::before {
+        transform: translateY(-15px);
+        box-shadow: 0 15px currentColor;
+    }
+
+    .open .nav-button {
+        z-index: 1000;
+    }
+
+    .open .nav-button::before {
+        transform: rotate(-45deg);
+        box-shadow: none;
+    }
+
+    .open .nav-button::after {
+        transform: rotate(45deg);
+        box-shadow: none;
+    }
+
+    .header__nav-container {
+        height: 80px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position:absolute;
+        top: 0;
+        left: 100%;
+        overflow: hidden;
+        transition: 0.5s ease-in-out;
+    }
+
+    .open .header__nav-container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 90%;
+        height: 80px;
+        top: 0;
+        left: 0;
+        padding: 0 10px;
+        background-color: black;
+    }
 }
