--- a/src/public/css/auth/register.css
+++ b/src/public/css/auth/register.css
@@ -28,6 +28,7 @@
     height: 60px;
     margin-bottom: 80px;
     font-size: 24px;
+    box-sizing: border-box;
 }
 
 .register__button {
@@ -59,4 +60,24 @@
 .form__error {
     font-size: 16px;
     color: red;
+}
+
+@media screen and (max-width: 768px) {
+    .nav-button {
+        display: none;
+    }
+
+    .main__contents {
+        width: 70%;
+    }
+
+    .main__contents input {
+        margin-bottom: 30px;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .main__contents {
+        width: 80%;
+    }
 }
