--- a/src/public/css/detail.css
+++ b/src/public/css/detail.css
@@ -14,10 +14,22 @@
 .item__image {
     width: 80%;
     margin: 0 auto;
+    position: relative;
 }
 
 .item__image img {
     width: 100%;
+}
+
+.sold span {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-weight: bold;
+    color: red;
+    font-size: 14px;
+    background-color: white;
 }
 
 .item__detail {
@@ -90,7 +102,7 @@
 }
 
 .item__index {
-    font-size: 36px;
+    font-size: 30px;
     margin-bottom: 20px;
 }
 
@@ -106,7 +118,7 @@
 }
 
 .item__label h3 {
-    font-size: 24px;
+    font-size: 20px;
     font-weight: bold;
     margin-right: 20px;
 }
@@ -128,4 +140,85 @@
 
 .item__label-condition {
     font-size: 20px;
+}
+
+@media screen and (max-width: 768px) {
+    .main__container {
+        display: block;
+    }
+
+    .item__wrapper {
+        width: 90%;
+        margin: 0 auto;
+    }
+
+    .image__wrapper {
+        width: 70%;
+        margin: 0 auto;
+    }
+
+    .item__name {
+        margin: 20px 0 10px;
+    }
+
+    .item__price {
+        width: 70%;
+        display: inline-block;
+    }
+
+    .item__purchase button{
+        margin: 0 0 20px;
+    }
+}
+
+@media screen and (max-width: 480px){
+    .main__container {
+        width: 90%;
+        margin: 50px auto;
+    }
+
+    .image__wrapper {
+        width: 95%;
+    }
+
+    .item__wrapper {
+        width: 100%;
+    }
+    .item__name {
+        font-size: 30px;
+    }
+
+    .item__brand {
+        font-size: 20px;
+    }
+
+    .item__price {
+        font-size: 26px;
+    }
+
+    .item__index {
+        font-size: 24px;
+    }
+
+    .item__label {
+        display: block;
+        margin: 20px 0;
+    }
+
+    .item__label h3 {
+        margin-bottom: 10px;
+    }
+
+    .item__label-category {
+        width: 100%;
+    }
+
+    .item__label-category p {
+        font-size: 16px;
+    }
+
+    .item__label-condition p {
+        font-size: 16px;
+    }
+
 }
