--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -33,9 +33,6 @@
 
 .main__item {
     width: 20%;
-}
-
-.sold {
     position: relative;
 }
 
@@ -76,4 +73,31 @@
     display: block;
     content: '';
     flex-grow: 1;
+}
+
+@media screen and (max-width: 768px) {
+    .main__item {
+        width: 50%;
+        margin-bottom: 20px;
+    }
+
+    .tab {
+        padding: 50px 50px 0;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .tab {
+        padding: 20px 50px 0;
+    }
+
+    .tab li {
+        font-size: 18px;
+        margin-right: 30px;
+        padding-top: 10px;
+    }
+
+    .main__item {
+        width: 100%;
+    }
 }
