--- a/src/public/css/sell.css
+++ b/src/public/css/sell.css
@@ -90,13 +90,14 @@
 .item__data__checkboxes {
     display: none;
     flex-direction: column;
-    width: 360px;
+    width: 50%;
     position: absolute;
     top: 0px;
     left: 0;
     z-index: 2;
     background-color: lightgray;
     border-radius: 4px;
+    font-size: 18px;
 }
 
 .item__data__checkbox-label {
@@ -182,4 +183,16 @@
 .error {
     font-size: 16px;
     color: red;
+}
+
+@media screen and (max-width: 768px) {
+    .main__container {
+        width: 80%;
+    }
+}
+
+@media screen and (max-width: 480px){
+    .item__data__checkboxes {
+        width: 70%;
+    }
 }
