--- a/src/public/css/comment.css
+++ b/src/public/css/comment.css
@@ -135,11 +135,18 @@
 }
 
 .comment-text {
+    width: 100%;
     background-color: #D9D9D9;
     font-size: 18px;
     border-radius: 4px;
     padding: 10px;
     margin-bottom: 15px;
+    box-sizing: border-box;
+}
+
+.comment-text p {
+    width: 100%;
+    overflow-wrap: anywhere;
 }
 
 .comment-form-title {
