--- a/src/public/css/mail/index.css
+++ b/src/public/css/mail/index.css
@@ -69,6 +69,11 @@
     font-size: 20px;
 }
 
+.form__error {
+    font-size: 14px;
+    color: red;
+}
+
 @media screen and (max-width:480px) {
     .main__container input {
         width: 90%;
