--- a/src/public/css/auth/address.css
+++ b/src/public/css/auth/address.css
@@ -44,7 +44,8 @@
     color: white;
     font-size: 26px;
     border: 2px solid #FF5555;
-    border-radius: 5px
+    border-radius: 5px;
+    cursor: pointer;
 }
 
 .form__error {
