--- a/src/public/css/auth/profile.css
+++ b/src/public/css/auth/profile.css
@@ -51,6 +51,7 @@
     border: 2px solid #FF5555;
     background-color: white;
     border-radius: 10px;
+    cursor: pointer;
 }
 
 .main__img-form-file {
@@ -82,7 +83,8 @@
     color: white;
     font-size: 26px;
     border: 2px solid #FF5555;
-    border-radius: 5px
+    border-radius: 5px;
+    cursor: pointer;
 }
 
 .form__error {
