--- a/src/public/css/comment.css
+++ b/src/public/css/comment.css
@@ -165,6 +165,11 @@
     box-sizing: border-box;
 }
 
+.error {
+    color: red;
+    font-size: 14px;
+}
+
 .comment-form-button {
     width: 100%;
     margin: 0 auto;
