--- a/src/public/css/sell.css
+++ b/src/public/css/sell.css
@@ -26,6 +26,7 @@
     border: 2px solid #FF5555;
     border-radius: 10px;
     padding: 8px 20px;
+    cursor: pointer;
 }
 
 .item__data-file {
@@ -36,6 +37,16 @@
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.item__data-file__preview {
+    width: 100%;
+    margin-top: 20px;
+}
+
+.item__data-file__preview img {
+    width: 100%;
+    border-radius: 4px;
 }
 
 .item__data-file input{
@@ -73,6 +84,7 @@
     font-size: 14px;
     display: flex;
     align-items: center;
+    cursor: pointer;
 }
 
 .item__data__checkbox-toggle::after {
@@ -88,7 +100,6 @@
 }
 
 .item__data__checkboxes {
-    display: none;
     flex-direction: column;
     width: 50%;
     position: absolute;
@@ -104,6 +115,7 @@
     padding: 5px;
     display: flex;
     align-items: center;
+    cursor: pointer;
 }
 
 .item__data__checkbox-label input {
@@ -132,6 +144,7 @@
     font-size: 14px;
     -webkit-appearance: none;
     appearance: none;
+    cursor: pointer;
 }
 
 .item__data-input {
@@ -178,6 +191,7 @@
     border: none;
     font-size: 26px;
     margin-bottom: 100px;
+    cursor: pointer;
 }
 
 .error {
