--- a/src/public/css/admin/user.css
+++ b/src/public/css/admin/user.css
@@ -106,6 +106,7 @@
 
 .main__item-text p {
     padding-bottom: 5px;
+    overflow-wrap: anywhere;
 }
 
 .item__form {
@@ -153,6 +154,10 @@
     border: none;
     color: #0073CC;
     cursor: pointer;
+}
+
+.sold img {
+    filter: grayscale(150);
 }
 
 @media screen and (max-width:768px) {
