--- a/src/public/css/comment.css
+++ b/src/public/css/comment.css
@@ -184,6 +184,7 @@
     border: none;
     border-radius: 4px;
     margin: 40px 0;
+    cursor: pointer;
 }
 
 @media screen and (max-width: 768px) {
